@@ -10,12 +10,12 @@ different terms.
 
 == Status and Bugs
 
-Wee is not considered production ready! It should only be used for small
-things. 
+Wee is now considered pretty stable (if you don't use continuations).
+Nevertheless I wouldn't use it yet for mission-critical applications ;-)
 
 Known Bugs:
 
-* Continuations leak memory!
+* Continuations leak memory (so don't use them)!
 
 == Introduction
 
@@ -80,11 +80,12 @@ can be any object, e.g. whole components:
    items = labels.collect {|m| MessageBox.new(m)}
    r.select_list(items).labels(labels).callback {|choosen| call choosen.first} 
 
-=== Continuation based (Optional)
+=== Optional use of Continuations
 
-<b>IMPORTANT:</b> <i>The current implementation of continuations in Ruby might lead
-to memory leaks, if you use continuations. Furthermore, if you use
-continuations, it's no longer possible to store the session state to disk.</i>
+<b>IMPORTANT:</b> <i>The current implementation of continuations in Ruby (or
+their use in Wee) might lead to memory leaks, if you use continuations.
+Furthermore, if you use continuations, it's no longer possible to store the
+session state to disk.</i>
 
 Continuation-based frameworks are also known as _modal_ frameworks. You can
 write code like the one shown below (taken from one of Avi's emails) where each
@@ -104,6 +105,10 @@ method displays a new page:
 Try to implement the same in a non-continuation based framework and show me
 your code... ;-)
 
+To enable continuations, you have to require:
+
+  require 'wee/continuation'
+
 === Fully Marshallable (drops Continuation support)
 
 If you don't need continuations, Wee can be made fully marshallable. It is not
@@ -119,8 +124,8 @@ yet fully marshallable (it was in the past), but it can be made, if required.
   DragonFly[www.dragonflybsd.org]. But with this approach it's still impossible
   to store sessions _selectively_ to disk. 
 
-* Each session runs in it's own (light-weigth) thread (this is a neccessity
-  when using continuations).
+* When using continuations, each session runs in it's own (light-weigth)
+  thread. This is not the case if you don't use continuations.
 
 * Only one action callback can be invoked per request (a former version of Wee
   was able to invoke multiple callback, and answer even from multiple
