@@ -283,46 +283,57 @@ class Wee::Component < Wee::Presenter
   # [+component+]
   #   The component to be called.
   #
+  # [+return_callback+]
+  #   Is invoked when the called component answers.
+  #   Either a symbol or any object that responds to #call. If it's a symbol,
+  #   then the corresponding method of the current component will be called.
+  #
+  # [+additional_args+]
+  #   Additional arguments that are passed (after the arguments given in
+  #   #answer) to the +return_callback+
+  #
   # <b>How it works</b>
   # 
-  # At first a continuation is created. The component to be called is then
-  # wrapped with an AnswerDecoration and the continuation is assigned to it's
-  # +on_answer+ attribute. Then a Delegate decoration is added to the calling
-  # component (self), which delegates to the component to be called
-  # (+component+). Then we unwind the calling stack back to the Session by
-  # throwing <i>:wee_back_to_session</i>. This means, that there is only ever
-  # one action callback invoked per request.  When at a later point in time the
-  # called component invokes #answer, this will throw a <i>:wee_answer</i>
-  # exception which is catched in the AnswerDecoration.  The AnswerDecoration
-  # then jumps back to the continuation we created at the beginning, and
-  # finally method #call returns. 
+  
+  # The component to be called is wrapped with an AnswerDecoration and the
+  # +return_callback+ parameter is assigned to it's +on_answer+ attribute (not
+  # directly as there are cleanup actions to be taken before the
+  # +return_callback+ can be invoked, hence we wrap it in the OnAnswer class).
+  # Then a Delegate decoration is added to the calling component (self), which
+  # delegates to the component to be called (+component+). 
   #
-  # Note that #call returns to an "old" stack-frame from a previous request.
-  # That is why we throw <i>:wee_back_to_session</i> after invoking an action
-  # callback, and that's why only ever one is invoked. We could remove this
-  # limitation without problems, but then there would be a difference between
-  # those action callbacks that call other components and those that do not.  
+  # Then we unwind the calling stack back to the Session by throwing
+  # <i>:wee_back_to_session</i>. This means, that there is only ever one action
+  # callback invoked per request. This is not neccessary, we could simply omit
+  # this, but then we'd break compatibility with the implementation using
+  # continuations.
+  #
+  # When at a later point in time the called component invokes #answer, this
+  # will throw a <i>:wee_answer</i> exception which is catched in the
+  # AnswerDecoration. The AnswerDecoration then invokes the +on_answer+
+  # callback which cleans up the decorations we added during #call, and finally
+  # passes control to the +return_callback+. 
 
-  def call(component, return_callback=:use_continuation, *additional_args)
+  def call(component, return_callback=nil, *additional_args)
     add_decoration(delegate = Wee::Delegate.new(component))
     component.add_decoration(answer = Wee::AnswerDecoration.new)
+    answer.on_answer = OnAnswer.new(self, component, delegate, answer, 
+                                    return_callback, additional_args)
+    throw :wee_back_to_session
+  end
 
-    if return_callback == :use_continuation
-      result = callcc {|cc|
-        answer.on_answer = cc
-        throw :wee_back_to_session
-      }
-      remove_decoration(delegate)
-      component.remove_decoration(answer)
-      return result
-    else
-      # TODO: make this marshallable! 
-      answer.on_answer = proc {|*args|
-        remove_decoration(delegate)
-        component.remove_decoration(answer)
-        self.send(return_callback, *(args+additional_args))
-      }
-      throw :wee_back_to_session
+  class OnAnswer < Struct.new(:calling_component, :called_component, :delegate, 
+                              :answer, :return_callback, :additional_args)
+
+    def call(*args)
+      calling_component.remove_decoration(delegate)
+      called_component.remove_decoration(answer)
+      return if return_callback.nil?
+      if return_callback.respond_to?(:call)
+        return_callback.call(*(args + additional_args))
+      else
+        calling_component.send(return_callback, *(args + additional_args))
+      end
     end
   end
 
